changed learning rate

--- a/NewBinary_efficientnetb3.ipynb
+++ b/NewBinary_efficientnetb3.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,13 +191,13 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_2 (InputLayer)            [(None, 300, 300, 3) 0                                            \n",
+      "input_3 (InputLayer)            [(None, 300, 300, 3) 0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "rescaling_1 (Rescaling)         (None, 300, 300, 3)  0           input_2[0][0]                    \n",
+      "rescaling_2 (Rescaling)         (None, 300, 300, 3)  0           input_3[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "normalization_1 (Normalization) (None, 300, 300, 3)  7           rescaling_1[0][0]                \n",
+      "normalization_2 (Normalization) (None, 300, 300, 3)  7           rescaling_2[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "stem_conv_pad (ZeroPadding2D)   (None, 301, 301, 3)  0           normalization_1[0][0]            \n",
+      "stem_conv_pad (ZeroPadding2D)   (None, 301, 301, 3)  0           normalization_2[0][0]            \n",
       "__________________________________________________________________________________________________\n",
       "stem_conv (Conv2D)              (None, 150, 150, 40) 1080        stem_conv_pad[0][0]              \n",
       "__________________________________________________________________________________________________\n",
@@ -812,13 +812,7 @@
       "                                                                 block6a_project_bn[0][0]         \n",
       "__________________________________________________________________________________________________\n",
       "block6c_expand_conv (Conv2D)    (None, 10, 10, 1392) 322944      block6b_add[0][0]                \n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "__________________________________________________________________________________________________\n",
       "block6c_expand_bn (BatchNormali (None, 10, 10, 1392) 5568        block6c_expand_conv[0][0]        \n",
       "__________________________________________________________________________________________________\n",
       "block6c_expand_activation (Acti (None, 10, 10, 1392) 0           block6c_expand_bn[0][0]          \n",
@@ -1012,9 +1006,9 @@
       "__________________________________________________________________________________________________\n",
       "avg_pool (GlobalAveragePooling2 (None, 1536)         0           top_activation[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization (BatchNorma (None, 1536)         6144        avg_pool[0][0]                   \n",
+      "batch_normalization_1 (BatchNor (None, 1536)         6144        avg_pool[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "top_dropout (Dropout)           (None, 1536)         0           batch_normalization[0][0]        \n",
+      "top_dropout (Dropout)           (None, 1536)         0           batch_normalization_1[0][0]      \n",
       "__________________________________________________________________________________________________\n",
       "pred (Dense)                    (None, 1)            1537        top_dropout[0][0]                \n",
       "==================================================================================================\n",
@@ -1047,7 +1041,7 @@
     "\n",
     "# Compile\n",
     "model = tf.keras.Model(inputs, outputs, name=\"EfficientNet\")\n",
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.01)\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
     "model.compile(optimizer=optimizer, loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
     "\n",
     "model.summary()"
