--- a/NewBinary_efficientnetb3.ipynb
+++ b/NewBinary_efficientnetb3.ipynb
@@ -85,6 +85,8 @@
     "df_train['image_id'] = train_x\n",
     "df_train['label'] = train_y\n",
     "\n",
+    "\n",
+    "\n",
     "# Test df\n",
     "df_val= pd.DataFrame(columns=['image_id','label'])\n",
     "df_val['image_id'] = val_x\n",
@@ -94,6 +96,27 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils import resample\n",
+    "non_melanoma = df_train[df_train['label']=='0']\n",
+    "melanoma = df_train[df_train['label']=='1']\n",
+    "\n",
+    "# upsample minority\n",
+    "melanoma_upsampled = resample(melanoma,\n",
+    "                          replace=True, # sample with replacement\n",
+    "                          n_samples=len(non_melanoma), # match number in majority class\n",
+    "                          random_state=27) # reproducible results\n",
+    "\n",
+    "\n",
+    "# combine majority and upsampled minority\n",
+    "df_train_upsampled = pd.concat([non_melanoma.reset_index(), melanoma_upsampled.reset_index()]).sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1500 validated image filenames belonging to 2 classes.\n",
+      "Found 2440 validated image filenames belonging to 2 classes.\n",
       "Found 500 validated image filenames belonging to 2 classes.\n",
       "Found 600 validated image filenames.\n"
      ]
@@ -131,13 +154,13 @@
     "                                )  \n",
     "\n",
     "\n",
-    "train_generator=train_datagen.flow_from_dataframe(dataframe=df_train,\n",
+    "train_generator=train_datagen.flow_from_dataframe(dataframe=df_train_upsampled,\n",
     "                                            directory='D:\\\\UNI\\\\5º Ano - 2º Semestre - 2020-2021 - TESE\\\\Dataset\\\\ISIC-2017_Training_Data\\\\',\n",
     "                                            x_col='image_id',\n",
     "                                            y_col='label',\n",
-    "                                            batch_size=32,\n",
+    "                                            batch_size=16,\n",
     "                                            seed=42,\n",
-    "                                            shuffle=True,\n",
+    "                                            shuffle=False,\n",
     "                                            class_mode='binary',\n",
     "                                            target_size=(IMG_SIZE,IMG_SIZE)\n",
     "                                           )\n",
@@ -147,7 +170,7 @@
     "                                            directory='D:\\\\UNI\\\\5º Ano - 2º Semestre - 2020-2021 - TESE\\\\Dataset\\\\ISIC-2017_Training_Data\\\\',\n",
     "                                            x_col='image_id',\n",
     "                                            y_col='label',\n",
-    "                                            batch_size=32,\n",
+    "                                            batch_size=16,\n",
     "                                            seed=42,\n",
     "                                            shuffle=True,\n",
     "                                            class_mode='binary',\n",
@@ -169,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -191,13 +214,13 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_3 (InputLayer)            [(None, 300, 300, 3) 0                                            \n",
+      "input_2 (InputLayer)            [(None, 300, 300, 3) 0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "rescaling_2 (Rescaling)         (None, 300, 300, 3)  0           input_3[0][0]                    \n",
+      "rescaling_1 (Rescaling)         (None, 300, 300, 3)  0           input_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "normalization_2 (Normalization) (None, 300, 300, 3)  7           rescaling_2[0][0]                \n",
+      "normalization_1 (Normalization) (None, 300, 300, 3)  7           rescaling_1[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "stem_conv_pad (ZeroPadding2D)   (None, 301, 301, 3)  0           normalization_2[0][0]            \n",
+      "stem_conv_pad (ZeroPadding2D)   (None, 301, 301, 3)  0           normalization_1[0][0]            \n",
       "__________________________________________________________________________________________________\n",
       "stem_conv (Conv2D)              (None, 150, 150, 40) 1080        stem_conv_pad[0][0]              \n",
       "__________________________________________________________________________________________________\n",
@@ -1006,9 +1029,9 @@
       "__________________________________________________________________________________________________\n",
       "avg_pool (GlobalAveragePooling2 (None, 1536)         0           top_activation[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_1 (BatchNor (None, 1536)         6144        avg_pool[0][0]                   \n",
+      "batch_normalization (BatchNorma (None, 1536)         6144        avg_pool[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "top_dropout (Dropout)           (None, 1536)         0           batch_normalization_1[0][0]      \n",
+      "top_dropout (Dropout)           (None, 1536)         0           batch_normalization[0][0]        \n",
       "__________________________________________________________________________________________________\n",
       "pred (Dense)                    (None, 1)            1537        top_dropout[0][0]                \n",
       "==================================================================================================\n",
@@ -1049,27 +1072,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15/15 [==============================] - 147s 9s/step - loss: 0.6631 - accuracy: 0.6136\n"
+      "31/31 [==============================] - 120s 4s/step - loss: 0.6246 - accuracy: 0.6760\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.6707270741462708, 0.5916666388511658]"
+       "[0.6291502118110657, 0.6592742204666138]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "#how this model performs on this data beforehand\n",
+    "STEP_SIZE_VALID=valid_generator.n//valid_generator.batch_size\n",
+    "model.evaluate(valid_generator,\n",
+    "               steps=STEP_SIZE_VALID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "153/153 [==============================] - 767s 5s/step - loss: 0.7132 - accuracy: 0.6234 - val_loss: 0.7369 - val_accuracy: 0.5260\n",
+      "Epoch 2/5\n",
+      "153/153 [==============================] - 737s 5s/step - loss: 0.6232 - accuracy: 0.6721 - val_loss: 0.8183 - val_accuracy: 0.5420\n",
+      "Epoch 3/5\n",
+      "153/153 [==============================] - 793s 5s/step - loss: 0.5880 - accuracy: 0.6930 - val_loss: 0.6216 - val_accuracy: 0.6340\n",
+      "Epoch 4/5\n",
+      "153/153 [==============================] - 1933s 13s/step - loss: 0.5714 - accuracy: 0.7172 - val_loss: 0.8643 - val_accuracy: 0.5500\n",
+      "Epoch 5/5\n",
+      " 21/153 [===>..........................] - ETA: 10:16 - loss: 0.5911 - accuracy: 0.6815"
+     ]
+    }
+   ],
+   "source": [
+    "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
+    "\n",
+    "model.fit(train_generator,\n",
+    "          epochs=5,\n",
+    "          validation_data=valid_generator,\n",
+    "          verbose=1\n",
+    "         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "STEP_SIZE_VALID=valid_generator.n//valid_generator.batch_size\n",
     "model.evaluate(valid_generator,\n",
