EfficientNetB3, 15 epochs. Training and validation sets are split using 'stratify' which preserves the same proportions of examples in each class as observed in the original dataset. Using resample to duplicate samples of melanoma and have a balanced training set. Data augmentation techniques. Mini-batches of size 16 in the training set, with same number of melanoma and non-melanoma samples. Evaluation Metrics: Confusion Matrix + ROC + AUC + Jaccard

--- a/NewBinary_efficientnetb3.ipynb
+++ b/NewBinary_efficientnetb3.ipynb
@@ -83,9 +83,6 @@
     "df_train['image_id'] = train_x\n",
     "df_train['label'] = train_y\n",
     "\n",
-    "\n",
-    "\n",
-    "# Test df\n",
     "df_val= pd.DataFrame(columns=['image_id','label'])\n",
     "df_val['image_id'] = val_x\n",
     "df_val['label'] = val_y"
@@ -93,9 +90,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1864</td>\n",
+       "      <td>ISIC_0014658.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>387</td>\n",
+       "      <td>ISIC_0000482.jpg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>689</td>\n",
+       "      <td>ISIC_0010016.jpg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1324</td>\n",
+       "      <td>ISIC_0012986.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1078</td>\n",
+       "      <td>ISIC_0012182.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1217</th>\n",
+       "      <td>1055</td>\n",
+       "      <td>ISIC_0012102.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1218</th>\n",
+       "      <td>1361</td>\n",
+       "      <td>ISIC_0013079.jpg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1218</th>\n",
+       "      <td>658</td>\n",
+       "      <td>ISIC_0009963.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1219</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>ISIC_0015233.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1219</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>ISIC_0011348.jpg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2440 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index          image_id label\n",
+       "0      1864  ISIC_0014658.jpg     0\n",
+       "0       387  ISIC_0000482.jpg     1\n",
+       "1       689  ISIC_0010016.jpg     1\n",
+       "1      1324  ISIC_0012986.jpg     0\n",
+       "2      1078  ISIC_0012182.jpg     0\n",
+       "...     ...               ...   ...\n",
+       "1217   1055  ISIC_0012102.jpg     0\n",
+       "1218   1361  ISIC_0013079.jpg     1\n",
+       "1218    658  ISIC_0009963.jpg     0\n",
+       "1219   1996  ISIC_0015233.jpg     0\n",
+       "1219   1031  ISIC_0011348.jpg     1\n",
+       "\n",
+       "[2440 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.utils import resample\n",
     "non_melanoma = df_train[df_train['label']=='0']\n",
@@ -110,7 +227,8 @@
     "\n",
     "# combine majority and upsampled minority alternately\n",
     "# by reseting indexes, both dataframes now start at 0, 1, 2, etc. and are then sorted\n",
-    "df_train_upsampled = pd.concat([non_melanoma.reset_index(), melanoma_upsampled.reset_index()]).sort_index()"
+    "df_train_upsampled = pd.concat([non_melanoma.reset_index(), melanoma_upsampled.reset_index()]).sort_index()\n",
+    "df_train_upsampled"
    ]
   },
   {
