Basic implementation - no tricks for better performance
Only using train test split, data augmentation, model is entirely frozen for feature extraction, then block 7b is unfrozen and finally proceed to classification.
Evaluation Metrics:
Accuracy, Confusion Matrix, ROC, AUC, Jaccard Index

--- a/Basic_BinaryClassf.ipynb
+++ b/Basic_BinaryClassf.ipynb
@@ -1141,7 +1141,6 @@
     "\n",
     "\n",
     "# Save the entire model as a SavedModel.\n",
-    "!mkdir -p saved_model\n",
     "model.save('saved_model/basic_binaryclassf_featureextr')\n",
     "\n",
     "# load model\n",
@@ -1572,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "oriented-metabolism",
+   "id": "refined-indonesian",
    "metadata": {
     "scrolled": true
    },
@@ -1620,17 +1619,32 @@
    "source": [
     "# simple early stopping\n",
     "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=5)\n",
-    "mc = ModelCheckpoint('saved_model/basic_binaryclassf', monitor='val_loss', mode='max', verbose=1, save_best_only=True)\n",
+    "mc = ModelCheckpoint('saved_model/best_basic_binaryclassf', monitor='val_loss', mode='max', verbose=1, save_best_only=True)\n",
     "\n",
     "hist=model.fit(train_generator,\n",
     "               epochs=8,\n",
     "               validation_data=valid_generator,\n",
     "               verbose=1,\n",
     "               callbacks=[es, mc]\n",
-    "         )\n",
-    "\n",
+    "         )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "stainless-maldives",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: saved_model/basic_binaryclassf\\assets\n"
+     ]
+    }
+   ],
+   "source": [
     "# Save the entire model as a SavedModel.\n",
-    "!mkdir -p saved_model\n",
     "model.save('saved_model/basic_binaryclassf')\n",
     "\n",
     "# load model\n",
