--- a/Basic_BinaryClassf.ipynb
+++ b/Basic_BinaryClassf.ipynb
@@ -1132,14 +1132,25 @@
    ],
    "source": [
     "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
+    "# simple early stopping\n",
+    "es_fe = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=5)\n",
+    "mc_fe = ModelCheckpoint('saved_model/best_basic_binaryclassf', monitor='val_loss', mode='max', verbose=1, save_best_only=True)\n",
     "\n",
     "hist=model.fit(train_generator,\n",
-    "          epochs=12,\n",
-    "          validation_data=valid_generator,\n",
-    "          verbose=1\n",
-    "         )\n",
-    "\n",
-    "\n",
+    "               epochs=12,\n",
+    "               validation_data=valid_generator,\n",
+    "               verbose=1,\n",
+    "               callbacks=[es_fe, mc_fe]\n",
+    "              )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "crucial-madrid",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save the entire model as a SavedModel.\n",
     "model.save('saved_model/basic_binaryclassf_featureextr')\n",
     "\n",
@@ -1571,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "refined-indonesian",
+   "id": "metropolitan-skating",
    "metadata": {
     "scrolled": true
    },
@@ -1626,27 +1637,16 @@
     "               validation_data=valid_generator,\n",
     "               verbose=1,\n",
     "               callbacks=[es, mc]\n",
-    "         )\n"
+    "              )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "stainless-maldives",
+   "execution_count": 26,
+   "id": "welsh-tuning",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: saved_model/basic_binaryclassf\\assets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Save the entire model as a SavedModel.\n",
-    "model.save('saved_model/basic_binaryclassf')\n",
-    "\n",
     "# load model\n",
     "#new_model = tf.keras.models.load_model('saved_model/basic_binaryclassf')\n",
     "#model.summary()"
