--- a/BinaryClassf_EfficientNetB3_finetuning_randomoversampler.ipynb
+++ b/BinaryClassf_EfficientNetB3_finetuning_randomoversampler.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "train_x, val_x, train_y, val_y = train_test_split(X, y, \n",
-    "                                                  test_size = 0.25, \n",
+    "                                                  test_size = 0.2, \n",
     "                                                  random_state = 27, \n",
     "                                                  stratify=y)"
    ]
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "removed-series",
    "metadata": {},
    "outputs": [
@@ -112,10 +112,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "id": "color-begin",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['[\"[\\'ISIC_0014658.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['[\"[\\'ISIC_0012986.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['[\"[\\'ISIC_0012182.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['[\"[\\'ISIC_0000408.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['[\"[\\'ISIC_0014630.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1215</th>\n",
+       "      <td>['[\"[\\'ISIC_0011213.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1216</th>\n",
+       "      <td>['[\"[\\'ISIC_0012851.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1217</th>\n",
+       "      <td>['[\"[\\'ISIC_0000189.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1218</th>\n",
+       "      <td>['[\"[\\'ISIC_0000326.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1219</th>\n",
+       "      <td>['[\"[\\'ISIC_0013747.jpg\\']\"]']</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1220 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            image_id label\n",
+       "0     ['[\"[\\'ISIC_0014658.jpg\\']\"]']     0\n",
+       "1     ['[\"[\\'ISIC_0012986.jpg\\']\"]']     0\n",
+       "2     ['[\"[\\'ISIC_0012182.jpg\\']\"]']     0\n",
+       "3     ['[\"[\\'ISIC_0000408.jpg\\']\"]']     0\n",
+       "4     ['[\"[\\'ISIC_0014630.jpg\\']\"]']     0\n",
+       "...                              ...   ...\n",
+       "1215  ['[\"[\\'ISIC_0011213.jpg\\']\"]']     0\n",
+       "1216  ['[\"[\\'ISIC_0012851.jpg\\']\"]']     0\n",
+       "1217  ['[\"[\\'ISIC_0000189.jpg\\']\"]']     0\n",
+       "1218  ['[\"[\\'ISIC_0000326.jpg\\']\"]']     0\n",
+       "1219  ['[\"[\\'ISIC_0013747.jpg\\']\"]']     0\n",
+       "\n",
+       "[1220 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#df_train_upsampled = pd.DataFrame().assign(image_id=train_x_overs[:, 0], label=train_y_overs)\n",
     "#print(df_train_upsampled)\n",
@@ -126,13 +234,18 @@
     "df_val['label'] = val_y\n",
     "\n",
     "df_train_upsampled = pd.DataFrame(columns=['image_id','label'])\n",
-    "for i in range(len(train_x_overs)): \n",
-    "    if (i % 2) == 0:\n",
-    "        df_train_upsampled=df_train_upsampled.append({'image_id': ''.join(train_x_overs[i]), 'label': train_y_overs[i] }, ignore_index=True)\n",
+    "for i in range(2*len(train_x_overs)):\n",
+    "    if i == 1220:\n",
+    "        break\n",
     "    else:\n",
-    "        if i==(2440-1223):\n",
-    "            break\n",
-    "        df_train_upsampled=df_train_upsampled.append({'image_id': ''.join(train_x_overs[i+1223]), 'label': train_y_overs[i+1223] }, ignore_index=True)"
+    "        if train_y_overs[i] == '0':\n",
+    "            df_train_upsampled=df_train_upsampled.append({'image_id': ''.join(train_x_overs[i]), 'label': train_y_overs[i] }, ignore_index=True)\n",
+    "            \n",
+    "        else:\n",
+    "            df_train_upsampled=df_train_upsampled.append({'image_id': ''.join(train_x_overs[i+1220]), 'label': train_y_overs[i+1220] }, ignore_index=True)\n",
+    "        \n",
+    "df_train_upsampled\n",
+    "#shuffle"
    ]
   },
   {
@@ -2569,15 +2682,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "polar-operations",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15/20 [=====================>........] - ETA: 1:15"
+     "ename": "NameError",
+     "evalue": "name 'test_generator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-57-7e21b253bb65>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest_generator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mSTEP_SIZE_TEST\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtest_generator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m//\u001b[0m\u001b[0mtest_generator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m pred=model.predict(test_generator,\n\u001b[0;32m      5\u001b[0m                    \u001b[0msteps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSTEP_SIZE_TEST\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_generator' is not defined"
      ]
     }
    ],
