--- a/Basic_BinaryClassf.ipynb
+++ b/Basic_BinaryClassf.ipynb
@@ -1133,8 +1133,8 @@
    "source": [
     "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
     "# simple early stopping\n",
-    "es_fe = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=5)\n",
-    "mc_fe = ModelCheckpoint('saved_model/best_basic_binaryclassf', monitor='val_loss', mode='max', verbose=1, save_best_only=True)\n",
+    "es_fe = tf.keras.callbacks.EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=5)\n",
+    "mc_fe = tf.keras.callbacks.ModelCheckpoint('saved_model/best_basic_binaryclassf', monitor='val_loss', mode='max', verbose=1, save_best_only=True)\n",
     "\n",
     "hist=model.fit(train_generator,\n",
     "               epochs=12,\n",
